# flanker-systems-simulation

./: README.md  accelerometer.hxx  air-data-computer.hxx  black-box.hxx  inertial-navigation-system.hxx  laser-ring-gyroscope.hxx  navigation-complex.hxx  ring-laser-gyroscope.hxx  system-power-supply.hxx
navigation-system/: BII_9.hxx  CMakeLists.txt  Makefile  ac-power-supply.hxx  acPowerSupply.hxx  accelerometer.hxx  air-data-computer.hxx  airDataComputer.hxx  basic-implementation-outline.txt  basic-switchology-outline.txt  black-box.hxx  blackBox.hxx  dc-power-supply.hxx  dcPowerSupply.hxx  gnss.hxx  inertial-navigation-system.hxx  inertialNavigationSystem.hxx  nav-system-test.hxx  nav-system-tests.hxx  navSystemTest.hxx  navigation-computer.hxx  navigationComputer.hxx  ring-laser-gyroscope.hxx  ringLaserGyroscope.hxx  system-description.txt  system-power-supply.hxx  systemPowerSupply.hxx
navigationSystem/: CMakeLists.txt
navigationSystem/notes/: basic-switchology-outline.txt  function-signatures.txt  interesting-code.txt  system-description.txt
navigationSystem/src/: BII_9.cpp  BII_9.hpp  CMakeLists.txt  acPowerSupply.cpp  acPowerSupply.hpp  accelerometer.cpp  accelerometer.hpp  airDataComputer.cpp  airDataComputer.hpp  blackBox.cpp  blackBox.hpp  dcPowerSupply.cpp  dcPowerSupply.hpp  gnss.cpp  gnss.hpp  main.cpp  navSystemTest.cpp  navSystemTest.hpp  navigationComputer.cpp  navigationComputer.hpp  quartzAccelerometer.cpp  quartzAccelerometer.hpp  ringLaserGyroscopeV2.cpp  ringLaserGyroscopeV2.hpp  systemPowerSupply.cpp  systemPowerSupply.hpp
unused/: navigation-complex-currently-unused.hxx
